--- a/test-page/email.html
+++ b/test-page/email.html
@@ -20,7 +20,7 @@
                     <!-- Left spacing -->
                     <td width="15">&nbsp;</td>
 
-                    <td align="left" style="font-size:14px; line-height:150%; color:inherit; color:#333; border-collapse:collapse; max-width:470px;" width="470">
+                    <td align="left" style="line-height:150%; color:inherit; color:#333; border-collapse:collapse; max-width:470px;" width="470">
 
                       <!-- Header -->
                       <p>
@@ -45,9 +45,21 @@
                         <em>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</em>. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                       </p>
 
-                      
+                      <center><a class="btn btn-block" href="#">Button Block</a></center>
+                      <br>
 
-                      <center><p><a class="btn" href="#">Button</a></p></center>
+                      <table>
+                        <tbody>
+                          <tr>
+                            <td class="small" width="20%" style="vertical-align: top; padding-right:10px;"><img src="http://placehold.it/75x75"></td>
+                            <td>
+                              <h4>Title Ipsum <small>This is a note.</small></h4>
+                              <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                              <!-- <a class="btn" href="#">Button</a> -->
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
                       <br>
 
                       <p>
