Email: Container thingy

--- a/test-page/email.html
+++ b/test-page/email.html
@@ -6,94 +6,80 @@
     <title>Subject</title>
   </head>
   <body>
-    <center>
-      <table border="0" cellpadding="0" cellspacing="0" style="background-color:#ffffff; background:#ffffff; width:100% !important; padding:0; white-space: normal; word-wrap: break-word;">
-        <tbody>
-          <tr>
-            <td valign="top">
-              <table align="center" border="0" cellpadding="0" cellspacing="0" style="">
-                <tbody>
-                  <!-- Top spacing -->
-                  <tr><td colspan="3" height="15">&nbsp;</td></tr>
+    <table class="main">
+      <tbody>
+        <tr>
+          <td valign="top">
+            <table class="container">
+              <tbody>
+                
+                <tr>
+                  <td class="content">
 
-                  <tr>
-                    <!-- Left spacing -->
-                    <td width="15">&nbsp;</td>
+                    <!-- Header -->
+                    <p>
+                      <a href="https://rime.co"><img class="brand" src="https://s3-us-west-2.amazonaws.com/rime/email/20141114-191835.png"></a>
+                    </p>
+                    <hr>
 
-                    <td align="left" style="line-height:150%; color:inherit; color:#333; border-collapse:collapse; max-width:470px;" width="470">
+                    <!-- Body -->
+                    <p>
+                      Hi [Name,fallback=[email]],
+                    </p>
 
-                      <!-- Header -->
-                      <p>
-                        <a href="https://rime.co"><img class="brand" src="https://s3-us-west-2.amazonaws.com/rime/email/20141114-191835.png"></a>
-                      </p>
-                      <hr>
+                    <p>
+                      <img src="https://placehold.it/600x300">
+                    </p>
 
-                      <!-- Body -->
-                      <p>
-                        Hi [Name,fallback=[email]],
-                      </p>
+                    <h1>The standard Lorem Ipsum passage, used since the 1500s</h1>
+                    <p>
+                      <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</b>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                    <p>
+                      <em>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</em>. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
 
-                      <p>
-                        <img src="https://placehold.it/600x300">
-                      </p>
+                    <center><a class="btn btn-block" href="#">Button Block</a></center>
+                    <br>
 
-                      <h1>The standard Lorem Ipsum passage, used since the 1500s</h1>
-                      <p>
-                        <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</b>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                      </p>
-                      <p>
-                        <em>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</em>. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                      </p>
+                    <table class="media">
+                      <tbody>
+                        <tr>
+                          <td class="media-object"><img src="http://placehold.it/75x75"></td>
+                          <td>
+                            <h4>Title Ipsum <small>This is a note.</small></h4>
+                            <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <!-- <a class="btn" href="#">Button</a> -->
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <br>
 
-                      <center><a class="btn btn-block" href="#">Button Block</a></center>
+                    <p>
+                      Happy [currentday]!<br>
+                      &mdash; The Rime (<a href="https://rime.co/@rime">@rime</a>) Team
+                    </p>
+
+                    <!-- Footer -->
+                    <hr>
+
+                    <p class="footer">
+                      &copy; Rime, IIT Bombay, India, MH 400076.
                       <br>
-
-                      <table>
-                        <tbody>
-                          <tr>
-                            <td class="small" width="20%" style="vertical-align: top; padding-right:10px;"><img src="http://placehold.it/75x75"></td>
-                            <td>
-                              <h4>Title Ipsum <small>This is a note.</small></h4>
-                              <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                              <!-- <a class="btn" href="#">Button</a> -->
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
+                      Rime respects your privacy. Read our online <a target="_blank" href="https://rime.co/about/privacy" target="_blank">Privacy statement</a>.
                       <br>
+                      <br>
+                      This message was sent to [email]. You can <a href="[unsubscribe]" target="_blank">unsubscribe</a> from these emails. You can also change your preferences by visiting your Email Options in your Rime account at <a href="https://rime.co/settings/notifications" target="_blank">settings/notifications</a>.
+                    </p>
 
-                      <p>
-                        Happy [currentday]!<br>
-                        &mdash; The Rime (<a href="https://rime.co/@rime">@rime</a>) Team
-                      </p>
-
-                      <!-- Footer -->
-                      <hr>
-
-                      <p class="footer">
-                        &copy; Rime, IIT Bombay, India, MH 400076.
-                        <br>
-                        Rime respects your privacy. Read our online <a target="_blank" href="https://rime.co/about/privacy" target="_blank">Privacy statement</a>.
-                        <br>
-                        <br>
-                        This message was sent to [email]. You can <a href="[unsubscribe]" target="_blank">unsubscribe</a> from these emails. You can also change your preferences by visiting your Email Options in your Rime account at <a href="https://rime.co/settings/notifications" target="_blank">settings/notifications</a>.
-                      </p>
-
-                    </td>
-
-
-                    <!-- Right spacing -->
-                    <td width="15">&nbsp;</td>
-                  </tr>
-
-                  <!-- Bottom spacing -->
-                  <tr><td colspan="3" height="15">&nbsp;</td></tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </center>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
