--- a/test-page/email.html
+++ b/test-page/email.html
@@ -9,22 +9,22 @@
     <table class="main">
       <tbody>
         <tr>
-          <td valign="top">
+          <td>
             <table class="container">
               <tbody>
-                
                 <tr>
                   <td class="content">
-
                     <!-- Header -->
                     <p>
                       <a href="https://rime.co"><img class="brand" src="https://s3-us-west-2.amazonaws.com/rime/email/20141114-191835.png"></a>
                     </p>
+
                     <hr>
+                    <!-- Header -->
 
                     <!-- Body -->
                     <p>
-                      Hi [Name,fallback=[email]],
+                      Hi [Name,fallback=Nemo],
                     </p>
 
                     <p>
@@ -39,17 +39,32 @@
                       <em>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</em>. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
 
-                    <center><a class="btn btn-block" href="#">Button Block</a></center>
-                    <br>
+                    <a class="btn btn-block" href="#">Button Block</a>
+                    <!-- <center>
+                      <a class="btn" href="#">Button</a>
+                    </center> -->
+
+                    <hr>
 
                     <table class="media">
                       <tbody>
                         <tr>
-                          <td class="media-object"><img src="http://placehold.it/75x75"></td>
+                          <td class="media-object"><img src="http://placehold.it/90x90"></td>
                           <td>
-                            <h4>Title Ipsum <small>This is a note.</small></h4>
-                            <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                            <h4>Lorem Ipsum <small>Ut enim ad</small></h4>
+                            <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             <!-- <a class="btn" href="#">Button</a> -->
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <table class="media">
+                      <tbody>
+                        <tr>
+                          <td class="media-object"><img src="http://placehold.it/90x90"></td>
+                          <td>
+                            <h4>Duis aute <small>Excepteur sint</small></h4>
+                            <p class="">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                           </td>
                         </tr>
                       </tbody>
@@ -60,6 +75,7 @@
                       Happy [currentday]!<br>
                       &mdash; The Rime (<a href="https://rime.co/@rime">@rime</a>) Team
                     </p>
+                    <!-- Body -->
 
                     <!-- Footer -->
                     <hr>
@@ -72,7 +88,7 @@
                       <br>
                       This message was sent to [email]. You can <a href="[unsubscribe]" target="_blank">unsubscribe</a> from these emails. You can also change your preferences by visiting your Email Options in your Rime account at <a href="https://rime.co/settings/notifications" target="_blank">settings/notifications</a>.
                     </p>
-
+                    <!-- Footer -->
                   </td>
                 </tr>
               </tbody>
