--- a/asset/font/fontello-entypo/demo.html
+++ b/asset/font/fontello-entypo/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?54858166');
-      src: url('./font/fontello.eot?54858166#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?54858166') format('woff'),
-           url('./font/fontello.ttf?54858166') format('truetype'),
-           url('./font/fontello.svg?54858166#fontello') format('svg');
+      src: url('./font/fontello.eot?125088');
+      src: url('./font/fontello.eot?125088#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?125088') format('woff'),
+           url('./font/fontello.ttf?125088') format('truetype'),
+           url('./font/fontello.svg?125088#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -322,55 +322,55 @@ body {
         <div title="Code: 0xe80c" class="the-icons span3"><i class="demo-icon icon-clock">&#xe80c;</i> <span class="i-name">icon-clock</span><span class="i-code">0xe80c</span></div>
         <div title="Code: 0xe80d" class="the-icons span3"><i class="demo-icon icon-cog">&#xe80d;</i> <span class="i-name">icon-cog</span><span class="i-code">0xe80d</span></div>
         <div title="Code: 0xe80e" class="the-icons span3"><i class="demo-icon icon-compass">&#xe80e;</i> <span class="i-name">icon-compass</span><span class="i-code">0xe80e</span></div>
-        <div title="Code: 0xe80f" class="the-icons span3"><i class="demo-icon icon-controller-play">&#xe80f;</i> <span class="i-name">icon-controller-play</span><span class="i-code">0xe80f</span></div>
+        <div title="Code: 0xe80f" class="the-icons span3"><i class="demo-icon icon-cross">&#xe80f;</i> <span class="i-name">icon-cross</span><span class="i-code">0xe80f</span></div>
       </div>
       <div class="row">
-        <div title="Code: 0xe810" class="the-icons span3"><i class="demo-icon icon-controller-record">&#xe810;</i> <span class="i-name">icon-controller-record</span><span class="i-code">0xe810</span></div>
-        <div title="Code: 0xe811" class="the-icons span3"><i class="demo-icon icon-controller-stop">&#xe811;</i> <span class="i-name">icon-controller-stop</span><span class="i-code">0xe811</span></div>
-        <div title="Code: 0xe812" class="the-icons span3"><i class="demo-icon icon-dot-single">&#xe812;</i> <span class="i-name">icon-dot-single</span><span class="i-code">0xe812</span></div>
-        <div title="Code: 0xe813" class="the-icons span3"><i class="demo-icon icon-dots-three-horizontal">&#xe813;</i> <span class="i-name">icon-dots-three-horizontal</span><span class="i-code">0xe813</span></div>
+        <div title="Code: 0xe810" class="the-icons span3"><i class="demo-icon icon-dot-single">&#xe810;</i> <span class="i-name">icon-dot-single</span><span class="i-code">0xe810</span></div>
+        <div title="Code: 0xe811" class="the-icons span3"><i class="demo-icon icon-dots-three-horizontal">&#xe811;</i> <span class="i-name">icon-dots-three-horizontal</span><span class="i-code">0xe811</span></div>
+        <div title="Code: 0xe812" class="the-icons span3"><i class="demo-icon icon-dots-three-vertical">&#xe812;</i> <span class="i-name">icon-dots-three-vertical</span><span class="i-code">0xe812</span></div>
+        <div title="Code: 0xe813" class="the-icons span3"><i class="demo-icon icon-dots-two-horizontal">&#xe813;</i> <span class="i-name">icon-dots-two-horizontal</span><span class="i-code">0xe813</span></div>
       </div>
       <div class="row">
-        <div title="Code: 0xe814" class="the-icons span3"><i class="demo-icon icon-dots-three-vertical">&#xe814;</i> <span class="i-name">icon-dots-three-vertical</span><span class="i-code">0xe814</span></div>
-        <div title="Code: 0xe815" class="the-icons span3"><i class="demo-icon icon-dots-two-horizontal">&#xe815;</i> <span class="i-name">icon-dots-two-horizontal</span><span class="i-code">0xe815</span></div>
-        <div title="Code: 0xe816" class="the-icons span3"><i class="demo-icon icon-dots-two-vertical">&#xe816;</i> <span class="i-name">icon-dots-two-vertical</span><span class="i-code">0xe816</span></div>
-        <div title="Code: 0xe817" class="the-icons span3"><i class="demo-icon icon-email">&#xe817;</i> <span class="i-name">icon-email</span><span class="i-code">0xe817</span></div>
+        <div title="Code: 0xe814" class="the-icons span3"><i class="demo-icon icon-dots-two-vertical">&#xe814;</i> <span class="i-name">icon-dots-two-vertical</span><span class="i-code">0xe814</span></div>
+        <div title="Code: 0xe815" class="the-icons span3"><i class="demo-icon icon-email">&#xe815;</i> <span class="i-name">icon-email</span><span class="i-code">0xe815</span></div>
+        <div title="Code: 0xe816" class="the-icons span3"><i class="demo-icon icon-export">&#xe816;</i> <span class="i-name">icon-export</span><span class="i-code">0xe816</span></div>
+        <div title="Code: 0xe817" class="the-icons span3"><i class="demo-icon icon-fingerprint">&#xe817;</i> <span class="i-name">icon-fingerprint</span><span class="i-code">0xe817</span></div>
       </div>
       <div class="row">
-        <div title="Code: 0xe818" class="the-icons span3"><i class="demo-icon icon-export">&#xe818;</i> <span class="i-name">icon-export</span><span class="i-code">0xe818</span></div>
-        <div title="Code: 0xe819" class="the-icons span3"><i class="demo-icon icon-fingerprint">&#xe819;</i> <span class="i-name">icon-fingerprint</span><span class="i-code">0xe819</span></div>
-        <div title="Code: 0xe81a" class="the-icons span3"><i class="demo-icon icon-flash">&#xe81a;</i> <span class="i-name">icon-flash</span><span class="i-code">0xe81a</span></div>
-        <div title="Code: 0xe81b" class="the-icons span3"><i class="demo-icon icon-game-controller">&#xe81b;</i> <span class="i-name">icon-game-controller</span><span class="i-code">0xe81b</span></div>
+        <div title="Code: 0xe818" class="the-icons span3"><i class="demo-icon icon-flash">&#xe818;</i> <span class="i-name">icon-flash</span><span class="i-code">0xe818</span></div>
+        <div title="Code: 0xe819" class="the-icons span3"><i class="demo-icon icon-game-controller">&#xe819;</i> <span class="i-name">icon-game-controller</span><span class="i-code">0xe819</span></div>
+        <div title="Code: 0xe81a" class="the-icons span3"><i class="demo-icon icon-graduation-cap">&#xe81a;</i> <span class="i-name">icon-graduation-cap</span><span class="i-code">0xe81a</span></div>
+        <div title="Code: 0xe81b" class="the-icons span3"><i class="demo-icon icon-heart-outlined">&#xe81b;</i> <span class="i-name">icon-heart-outlined</span><span class="i-code">0xe81b</span></div>
       </div>
       <div class="row">
-        <div title="Code: 0xe81c" class="the-icons span3"><i class="demo-icon icon-graduation-cap">&#xe81c;</i> <span class="i-name">icon-graduation-cap</span><span class="i-code">0xe81c</span></div>
-        <div title="Code: 0xe81d" class="the-icons span3"><i class="demo-icon icon-heart-outlined">&#xe81d;</i> <span class="i-name">icon-heart-outlined</span><span class="i-code">0xe81d</span></div>
-        <div title="Code: 0xe81e" class="the-icons span3"><i class="demo-icon icon-heart">&#xe81e;</i> <span class="i-name">icon-heart</span><span class="i-code">0xe81e</span></div>
-        <div title="Code: 0xe81f" class="the-icons span3"><i class="demo-icon icon-hour-glass">&#xe81f;</i> <span class="i-name">icon-hour-glass</span><span class="i-code">0xe81f</span></div>
+        <div title="Code: 0xe81c" class="the-icons span3"><i class="demo-icon icon-heart">&#xe81c;</i> <span class="i-name">icon-heart</span><span class="i-code">0xe81c</span></div>
+        <div title="Code: 0xe81d" class="the-icons span3"><i class="demo-icon icon-help-with-circle">&#xe81d;</i> <span class="i-name">icon-help-with-circle</span><span class="i-code">0xe81d</span></div>
+        <div title="Code: 0xe81e" class="the-icons span3"><i class="demo-icon icon-hour-glass">&#xe81e;</i> <span class="i-name">icon-hour-glass</span><span class="i-code">0xe81e</span></div>
+        <div title="Code: 0xe81f" class="the-icons span3"><i class="demo-icon icon-info-with-circle">&#xe81f;</i> <span class="i-name">icon-info-with-circle</span><span class="i-code">0xe81f</span></div>
       </div>
       <div class="row">
-        <div title="Code: 0xe820" class="the-icons span3"><i class="demo-icon icon-info-with-circle">&#xe820;</i> <span class="i-name">icon-info-with-circle</span><span class="i-code">0xe820</span></div>
+        <div title="Code: 0xe820" class="the-icons span3"><i class="demo-icon icon-info">&#xe820;</i> <span class="i-name">icon-info</span><span class="i-code">0xe820</span></div>
         <div title="Code: 0xe821" class="the-icons span3"><i class="demo-icon icon-location-pin">&#xe821;</i> <span class="i-name">icon-location-pin</span><span class="i-code">0xe821</span></div>
         <div title="Code: 0xe822" class="the-icons span3"><i class="demo-icon icon-magnifying-glass">&#xe822;</i> <span class="i-name">icon-magnifying-glass</span><span class="i-code">0xe822</span></div>
         <div title="Code: 0xe823" class="the-icons span3"><i class="demo-icon icon-mail">&#xe823;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe823</span></div>
       </div>
       <div class="row">
         <div title="Code: 0xe824" class="the-icons span3"><i class="demo-icon icon-minus">&#xe824;</i> <span class="i-name">icon-minus</span><span class="i-code">0xe824</span></div>
-        <div title="Code: 0xe825" class="the-icons span3"><i class="demo-icon icon-newsletter">&#xe825;</i> <span class="i-name">icon-newsletter</span><span class="i-code">0xe825</span></div>
-        <div title="Code: 0xe826" class="the-icons span3"><i class="demo-icon icon-pin">&#xe826;</i> <span class="i-name">icon-pin</span><span class="i-code">0xe826</span></div>
-        <div title="Code: 0xe827" class="the-icons span3"><i class="demo-icon icon-plus">&#xe827;</i> <span class="i-name">icon-plus</span><span class="i-code">0xe827</span></div>
+        <div title="Code: 0xe825" class="the-icons span3"><i class="demo-icon icon-pin">&#xe825;</i> <span class="i-name">icon-pin</span><span class="i-code">0xe825</span></div>
+        <div title="Code: 0xe826" class="the-icons span3"><i class="demo-icon icon-plus">&#xe826;</i> <span class="i-name">icon-plus</span><span class="i-code">0xe826</span></div>
+        <div title="Code: 0xe827" class="the-icons span3"><i class="demo-icon icon-quote">&#xe827;</i> <span class="i-name">icon-quote</span><span class="i-code">0xe827</span></div>
       </div>
       <div class="row">
-        <div title="Code: 0xe828" class="the-icons span3"><i class="demo-icon icon-quote">&#xe828;</i> <span class="i-name">icon-quote</span><span class="i-code">0xe828</span></div>
-        <div title="Code: 0xe829" class="the-icons span3"><i class="demo-icon icon-reply">&#xe829;</i> <span class="i-name">icon-reply</span><span class="i-code">0xe829</span></div>
-        <div title="Code: 0xe82a" class="the-icons span3"><i class="demo-icon icon-retweet">&#xe82a;</i> <span class="i-name">icon-retweet</span><span class="i-code">0xe82a</span></div>
-        <div title="Code: 0xe82b" class="the-icons span3"><i class="demo-icon icon-rss">&#xe82b;</i> <span class="i-name">icon-rss</span><span class="i-code">0xe82b</span></div>
+        <div title="Code: 0xe828" class="the-icons span3"><i class="demo-icon icon-reply">&#xe828;</i> <span class="i-name">icon-reply</span><span class="i-code">0xe828</span></div>
+        <div title="Code: 0xe829" class="the-icons span3"><i class="demo-icon icon-retweet">&#xe829;</i> <span class="i-name">icon-retweet</span><span class="i-code">0xe829</span></div>
+        <div title="Code: 0xe82a" class="the-icons span3"><i class="demo-icon icon-rss">&#xe82a;</i> <span class="i-name">icon-rss</span><span class="i-code">0xe82a</span></div>
+        <div title="Code: 0xe82b" class="the-icons span3"><i class="demo-icon icon-share-alternative">&#xe82b;</i> <span class="i-name">icon-share-alternative</span><span class="i-code">0xe82b</span></div>
       </div>
       <div class="row">
-        <div title="Code: 0xe82c" class="the-icons span3"><i class="demo-icon icon-share-alternative">&#xe82c;</i> <span class="i-name">icon-share-alternative</span><span class="i-code">0xe82c</span></div>
-        <div title="Code: 0xe82d" class="the-icons span3"><i class="demo-icon icon-shareable">&#xe82d;</i> <span class="i-name">icon-shareable</span><span class="i-code">0xe82d</span></div>
-        <div title="Code: 0xe82e" class="the-icons span3"><i class="demo-icon icon-star-outlined">&#xe82e;</i> <span class="i-name">icon-star-outlined</span><span class="i-code">0xe82e</span></div>
-        <div title="Code: 0xe82f" class="the-icons span3"><i class="demo-icon icon-star">&#xe82f;</i> <span class="i-name">icon-star</span><span class="i-code">0xe82f</span></div>
+        <div title="Code: 0xe82c" class="the-icons span3"><i class="demo-icon icon-shareable">&#xe82c;</i> <span class="i-name">icon-shareable</span><span class="i-code">0xe82c</span></div>
+        <div title="Code: 0xe82d" class="the-icons span3"><i class="demo-icon icon-star-outlined">&#xe82d;</i> <span class="i-name">icon-star-outlined</span><span class="i-code">0xe82d</span></div>
+        <div title="Code: 0xe82e" class="the-icons span3"><i class="demo-icon icon-star">&#xe82e;</i> <span class="i-name">icon-star</span><span class="i-code">0xe82e</span></div>
+        <div title="Code: 0xe82f" class="the-icons span3"><i class="demo-icon icon-trash">&#xe82f;</i> <span class="i-name">icon-trash</span><span class="i-code">0xe82f</span></div>
       </div>
       <div class="row">
         <div title="Code: 0xe830" class="the-icons span3"><i class="demo-icon icon-trophy">&#xe830;</i> <span class="i-name">icon-trophy</span><span class="i-code">0xe830</span></div>
