--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>CDN by RimeOfficial</title>
+    <title>Static by RimeOfficial</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -17,40 +17,53 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>CDN</h1>
+        <h1>Static</h1>
         <p>Content Delivery Network</p>
-        <p class="view"><a href="https://github.com/RimeOfficial/cdn">View the Project on GitHub <small>RimeOfficial/cdn</small></a></p>
+        <p class="view"><a href="https://github.com/RimeOfficial/static">View the Project on GitHub <small>RimeOfficial/static</small></a></p>
         <ul>
-          <li><a href="https://github.com/RimeOfficial/cdn/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/RimeOfficial/cdn/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/RimeOfficial/cdn">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/RimeOfficial/static/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/RimeOfficial/static/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/RimeOfficial/static">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="rimeofficialgithubio-static" class="anchor" href="#rimeofficialgithubio-static" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>rimeofficial.github.io <code>static</code>
+</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This is a pre commit script that checks added, copied, modified or renamed files for:</p>
+
+<ul>
+<li>Minify js/css</li>
+<li>Dynamic revision (add hash to file name) to escape browser cache</li>
+<li><del>syntax errors and PSR2 coding standards.</del></li>
+</ul>
+
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
+
+<div class="highlight highlight-source-shell"><pre><span class="pl-c"># Run from repository root dir</span>
+sh pre-commit-setup.sh</pre></div>
+
+<h2>
+<a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h2>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="yui-compressor-yuigithubio" class="anchor" href="#yui-compressor-yuigithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>YUI Compressor (<a href="http://yui.github.io/yuicompressor/">yui.github.io</a>)</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<div class="highlight highlight-source-shell"><pre>brew install yuicompressor</pre></div>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>JDK required <a href="http://www.java.com/en/download/mac_download.jsp">http://www.java.com/en/download/mac_download.jsp</a></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>References</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li><a href="https://gist.github.com/keesvanbochove/4319624">keesvanbochove/<strong>gist:4319624</strong></a></li>
+<li><a href="https://github.com/WouterSioen/pre-commit">WouterSioen/<strong>pre-commit</strong></a></li>
+<li><a href="https://gist.github.com/larsxschneider/3957621">larsxschneider/<strong>.git-fix-whitespaces.sh</strong></a></li>
+<li><a href="https://github.com/phpbb/phpbb/blob/develop-olympus/git-tools/hooks/pre-commit">phpbb/<strong>phpbb</strong></a></li>
+</ul>
       </section>
     </div>
     <footer>
