Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>Static</h1>
-        <p>Content Delivery Network</p>
+        <p>X-Cache: Hit form cloudftont</p>
         <p class="view"><a href="https://github.com/RimeOfficial/static">View the Project on GitHub <small>RimeOfficial/static</small></a></p>
         <ul>
           <li><a href="https://github.com/RimeOfficial/static/zipball/master">Download <strong>ZIP File</strong></a></li>
