Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,14 +28,22 @@
       </header>
       <section>
         <h1>
-<a id="rimeofficialgithubio-static" class="anchor" href="#rimeofficialgithubio-static" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>rimeofficial.github.io <code>static</code>
+<a id="static" class="anchor" href="#static" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><code>static</code>
 </h1>
+
+<p><a href="https://static.rime.co"><img src="https://static.rime.co/favicon.png" alt="favicon"></a></p>
+
+<pre><code>X-Cache: Hit form cloudftont
+</code></pre>
+
+<h1>
+<a id="pre-commit" class="anchor" href="#pre-commit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pre-commit</h1>
 
 <p>This is a pre commit script that checks added, copied, modified or renamed files for:</p>
 
 <ul>
 <li>Minify js/css</li>
-<li>Dynamic revision (add hash to file name) to escape browser cache</li>
+<li><del>Dynamic revision (add hash to file name) to escape browser cache</del></li>
 <li><del>syntax errors and PSR2 coding standards.</del></li>
 </ul>
 
