Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -81,8 +81,18 @@ sh pre-commit-setup.sh</pre></div>
 <li><a href="http://s3.amazonaws.com/static.rime/index.html">http://s3.amazonaws.com/static.rime/index.html</a></li>
 <li><a href="https://s3.amazonaws.com/static.rime/index.html">https://s3.amazonaws.com/static.rime/index.html</a></li>
 <li><a href="https://d1xk7omnmhphih.cloudfront.net/index.html">https://d1xk7omnmhphih.cloudfront.net/index.html</a></li>
-<li><a href="https://static.rime.co/index.html">https://static.rime.co/index.html</a></li>
+<li><a href="https://static.rime.co/favicon.ico">https://static.rime.co/favicon.ico</a></li>
 </ol>
+
+<h1>
+<a id="comparison" class="anchor" href="#comparison" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparison</h1>
+
+<ul>
+<li>Gh-pages <a href="https://rimeofficial.github.io/favicon.ico">https://rimeofficial.github.io/favicon.ico</a>
+</li>
+<li>CloudFront <a href="https://static.rime.co/favicon.ico">https://static.rime.co/favicon.ico</a>
+</li>
+</ul>
       </section>
     </div>
     <footer>
