Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
         </ul>
       </header>
       <section>
-        <h1>
-<a id="static" class="anchor" href="#static" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Static</h1>
-
-<p><a href="https://static.rime.co/favicon.png"><img src="https://static.rime.co/favicon.png" alt="favicon"></a></p>
-
-<pre><code>X-Cache: Hit form cloudftont
-</code></pre>
+        <p><a href="https://static.rime.co/favicon.png"><img src="https://static.rime.co/favicon.png" alt="favicon"></a></p>
 
 <h1>
 <a id="pre-commit" class="anchor" href="#pre-commit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pre-commit</h1>
@@ -88,9 +82,9 @@ sh pre-commit-setup.sh</pre></div>
 <a id="comparison" class="anchor" href="#comparison" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparison</h1>
 
 <ul>
-<li>Gh-pages <a href="https://rimeofficial.github.io/favicon.ico">https://rimeofficial.github.io/favicon.ico</a>
+<li>Gh-pages <a href="http://pages.rime.co/favicon.ico">with CNAME</a> and <a href="https://rimeofficial.github.io/rimeofficial.GitHub.io/favicon.ico">HTTPS</a>
 </li>
-<li>CloudFront <a href="https://static.rime.co/favicon.ico">https://static.rime.co/favicon.ico</a>
+<li>CloudFront <a href="https://static.rime.co/favicon.ico">with HTTPS</a> and <a href="https://static.rime.co/images/favicon.ico">subdomain</a>
 </li>
 </ul>
       </section>
