Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,37 @@
         </ul>
       </header>
       <section>
-        <p><a href="https://static.rime.co/favicon.png"><img src="https://static.rime.co/favicon.png" alt="favicon"></a></p>
+        <h1>
+<a id="comparison" class="anchor" href="#comparison" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparison</h1>
+
+<table>
+<thead>
+<tr>
+<th>vars</th>
+<th>Gh-Pages</th>
+<th>CloudFront</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>CNAME</code></td>
+<td><a href="http://pages.rime.co/favicon.ico">with CNAME</a></td>
+<td><a href="https://static.rime.co/images/favicon.ico">custom domain</a></td>
+</tr>
+<tr>
+<td><code>HTTPS</code></td>
+<td>
+<a href="https://rimeofficial.github.io/rimeofficial.GitHub.io/favicon.ico">fake</a> <a href="https://rimeofficial.github.io/favicon.ico">HTTPS</a>
+</td>
+<td><a href="https://static.rime.co/favicon.ico">with real HTTPS</a></td>
+</tr>
+<tr>
+<td><code>favicon.png</code></td>
+<td><img src="https://rimeofficial.github.io/favicon.png" alt="favicon"></td>
+<td><img src="https://static.rime.co/favicon.png" alt="favicon"></td>
+</tr>
+</tbody>
+</table>
 
 <h1>
 <a id="pre-commit" class="anchor" href="#pre-commit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pre-commit</h1>
@@ -77,16 +107,6 @@ sh pre-commit-setup.sh</pre></div>
 <li><a href="https://d1xk7omnmhphih.cloudfront.net/index.html">https://d1xk7omnmhphih.cloudfront.net/index.html</a></li>
 <li><a href="https://static.rime.co/favicon.ico">https://static.rime.co/favicon.ico</a></li>
 </ol>
-
-<h1>
-<a id="comparison" class="anchor" href="#comparison" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparison</h1>
-
-<ul>
-<li>Gh-pages <a href="http://pages.rime.co/favicon.ico">with CNAME</a> and <a href="https://rimeofficial.github.io/rimeofficial.GitHub.io/favicon.ico">HTTPS</a>
-</li>
-<li>CloudFront <a href="https://static.rime.co/favicon.ico">with HTTPS</a> and <a href="https://static.rime.co/images/favicon.ico">subdomain</a>
-</li>
-</ul>
       </section>
     </div>
     <footer>
