--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@ sh pre-commit-setup.sh</pre></div>
 <ol>
 <li><a href="http://rimeofficial.github.io/static/">http://rimeofficial.github.io/static/</a></li>
 <li><a href="http://pages.rime.co/static/">http://pages.rime.co/static/</a></li>
-<li><a href="http://s3.amazonaws.com/static.rime/index.html">http://s3.amazonaws.com/static.rime/index.html</a></li>
-<li><a href="https://s3.amazonaws.com/static.rime/index.html">https://s3.amazonaws.com/static.rime/index.html</a></li>
-<li><a href="https://d1xk7omnmhphih.cloudfront.net/index.html">https://d1xk7omnmhphih.cloudfront.net/index.html</a></li>
-<li><a href="https://static.rime.co/favicon.ico">https://static.rime.co/favicon.ico</a></li>
+<li><a href="http://s3.amazonaws.com/static.rime/favicon.png">http://s3.amazonaws.com/static.rime/favicon.png</a></li>
+<li><a href="https://s3.amazonaws.com/static.rime/favicon.png">https://s3.amazonaws.com/static.rime/favicon.png</a></li>
+<li><a href="https://d3j2phhb7izzuc.cloudfront.net/favicon.png">https://d3j2phhb7izzuc.cloudfront.net/favicon.png</a></li>
+<li><a href="https://static.rime.co/favicon.png">https://static.rime.co/favicon.png</a></li>
 </ol>
       </section>
     </div>
