Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 <tbody>
 <tr>
 <td><code>CNAME</code></td>
-<td><a href="http://pages.rime.co/favicon.ico">with CNAME</a></td>
-<td><a href="https://static.rime.co/images/favicon.ico">custom domain</a></td>
+<td><a href="http://pages.rime.co/favicon.png">with CNAME</a></td>
+<td><a href="https://static.rime.co/images/favicon.png">custom CDN</a></td>
 </tr>
 <tr>
 <td><code>HTTPS</code></td>
 <td>
-<a href="https://rimeofficial.github.io/rimeofficial.GitHub.io/favicon.ico">fake</a> <a href="https://rimeofficial.github.io/favicon.ico">HTTPS</a>
+<a href="https://rimeofficial.github.io/rimeofficial.GitHub.io/favicon.png">redirect</a> <a href="https://rimeofficial.github.io/favicon.png"> HTTPS</a>
 </td>
-<td><a href="https://static.rime.co/favicon.ico">with real HTTPS</a></td>
+<td><a href="https://static.rime.co/favicon.png">free HTTPS</a></td>
 </tr>
 <tr>
 <td><code>favicon.png</code></td>
