--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>Static by RimeOfficial</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
+
+    <header>
+      <div class="container">
         <h1>Static</h1>
-        <p>X-Cache: Hit form cloudftont</p>
-        <p class="view"><a href="https://github.com/RimeOfficial/static">View the Project on GitHub <small>RimeOfficial/static</small></a></p>
-        <ul>
-          <li><a href="https://github.com/RimeOfficial/static/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/RimeOfficial/static/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/RimeOfficial/static">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+        <h2>X-Cache: Hit form cloudftont</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/RimeOfficial/static/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/RimeOfficial/static/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/RimeOfficial/static" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a id="comparison" class="anchor" href="#comparison" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparison</h1>
 
@@ -41,7 +42,7 @@
 <tbody>
 <tr>
 <td><code>CNAME</code></td>
-<td><a href="http://pages.rime.co/favicon.png">with CNAME</a></td>
+<td><a href="http://www.rime.co/favicon.png">with CNAME</a></td>
 <td><a href="https://static.rime.co/images/favicon.png">custom CDN</a></td>
 </tr>
 <tr>
@@ -100,8 +101,8 @@ sh pre-commit-setup.sh</pre></div>
 <a id="endpoints" class="anchor" href="#endpoints" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Endpoints</h1>
 
 <ol>
-<li><a href="http://rimeofficial.github.io/static/">http://rimeofficial.github.io/static/</a></li>
-<li><a href="http://pages.rime.co/static/">http://pages.rime.co/static/</a></li>
+<li><a href="http://rimeofficial.github.io/favicon.png">http://rimeofficial.github.io/favicon.png</a></li>
+<li><a href="http://www.rime.co/favicon.png">http://www.rime.co/favicon.png</a></li>
 <li><a href="http://s3.amazonaws.com/static.rime/favicon.png">http://s3.amazonaws.com/static.rime/favicon.png</a></li>
 <li><a href="https://s3.amazonaws.com/static.rime/favicon.png">https://s3.amazonaws.com/static.rime/favicon.png</a></li>
 <li><a href="https://d3j2phhb7izzuc.cloudfront.net/favicon.png">https://d3j2phhb7izzuc.cloudfront.net/favicon.png</a></li>
@@ -109,11 +110,17 @@ sh pre-commit-setup.sh</pre></div>
 </ol>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/RimeOfficial">RimeOfficial</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-41643154-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
